---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 6
#pragma mapfile "map/any.msgm"

meta {
    table: {
        0: {script: "script0"},
        1: {script: "script1"},
        10: {script: "script10"},
        11: {script: "script11"},
        default: {script: "script0"},
    },
}


script script0 {
    show(0, 0);
    face(0, 0);
    anmInterrupt(0, 1);
+60: // 60
    textPause(300);
}


script script1 {
    show(0, 0);
    stop();
}


script script10 {
    show(0, 0);
    face(0, 0);
    anmInterrupt(0, 1);
}


script script11 {
    show(0, 0);
    anmInterrupt(0, 1);
}

